compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__warnings__javascript_unsafe_int_octal.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\npub fn go() {\n  [\n    0o377777777777777776,\n    0o377777777777777777,\n    0o400000000000000000,\n  ]\n}\n"
---
----- SOURCE CODE

pub fn go() {
  [
    0o377777777777777776,
    0o377777777777777777,
    0o400000000000000000,
  ]
}


----- WARNING
warning: Int is outside JavaScript's safe integer range
  ┌─ /src/warning/wrn.rakun:6:5
  │
6 │     0o400000000000000000,
  │     ^^^^^^^^^^^^^^^^^^^^ This is not a safe integer value on JavaScript

This integer value is too large to be represented accurately by
JavaScript's number type. To avoid this warning integer values must be in
the range -(2^53 - 1) - (2^53 - 1).

See JavaScript's Number.MAX_SAFE_INTEGER and Number.MIN_SAFE_INTEGER
properties for more information.
