compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__warnings__javascript_unsafe_int_segment_size_in_const_bit_array.snap
---
source: compiler-core/src/type_/tests/warnings.rs
assertion_line: 2642
expression: "\npub const ints = [\n  <<0:9_007_199_254_740_992>>,\n  <<0:size(9_007_199_254_740_992)>>,\n]\n"
---
----- SOURCE CODE

pub const ints = [
  <<0:9_007_199_254_740_992>>,
  <<0:size(9_007_199_254_740_992)>>,
]


----- WARNING
warning: Int is outside JavaScript's safe integer range
  ┌─ /src/warning/wrn.rakun:3:7
  │
3 │   <<0:9_007_199_254_740_992>>,
  │       ^^^^^^^^^^^^^^^^^^^^^ This is not a safe integer value on JavaScript

This integer value is too large to be represented accurately by
JavaScript's number type. To avoid this warning integer values must be in
the range -(2^53 - 1) - (2^53 - 1).

See JavaScript's Number.MAX_SAFE_INTEGER and Number.MIN_SAFE_INTEGER
properties for more information.

warning: Int is outside JavaScript's safe integer range
  ┌─ /src/warning/wrn.rakun:4:12
  │
4 │   <<0:size(9_007_199_254_740_992)>>,
  │            ^^^^^^^^^^^^^^^^^^^^^ This is not a safe integer value on JavaScript

This integer value is too large to be represented accurately by
JavaScript's number type. To avoid this warning integer values must be in
the range -(2^53 - 1) - (2^53 - 1).

See JavaScript's Number.MAX_SAFE_INTEGER and Number.MIN_SAFE_INTEGER
properties for more information.
