compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__warnings__javascript_unsafe_int_with_external_function_call.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\npub fn main() {\n  9_007_199_254_740_992 + helper()\n}\n\n@external(javascript, \"a\", \"b\")\nfn helper() -> Int\n"
---
----- SOURCE CODE

pub fn main() {
  9_007_199_254_740_992 + helper()
}

@external(javascript, "a", "b")
fn helper() -> Int


----- WARNING
warning: Int is outside JavaScript's safe integer range
  ┌─ /src/warning/wrn.rakun:3:3
  │
3 │   9_007_199_254_740_992 + helper()
  │   ^^^^^^^^^^^^^^^^^^^^^ This is not a safe integer value on JavaScript

This integer value is too large to be represented accurately by
JavaScript's number type. To avoid this warning integer values must be in
the range -(2^53 - 1) - (2^53 - 1).

See JavaScript's Number.MAX_SAFE_INTEGER and Number.MIN_SAFE_INTEGER
properties for more information.
